infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: goodmomen/client
---
  apiVersion: v1
  kind: Service
  metadata: 
    name: client-service
  spec:
    selector:
      app: client
    ports:
      - name: client
        protocol: TCP
        port: 3000
        targetPort: 3000
