infra/k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: goodmomen/payments
---
  apiVersion: v1
  kind: Service
  metadata: 
    name: payments-service
  spec:
    selector:
      app: payments
    ports:
      - name: payments
        protocol: TCP
        port: 3000
        targetPort: 3000
